# drunken-ants

./: LOG.txt  TODO
example-ants/: test2.ha
example-ants/correct/: lb_strategy.ha  module_a.ha  mv_strategy.ha  our_silly_strategy.ha  our_strategy.ha  ph_strategy.ha  pres_ant.ha  rec-good-diff1.ha  rec-good.ha  test1.ha  test2.ha  test3.ha  test_last.ha
example-ants/fail/: rec-bad.ha  test2.ha
example-ants/sample_output/: afp05-team1.ant  afp05-team2.ant  afp05-team3.ant  afp06-group3.ant  afp06-locoloco.ant  afp06-team4a.ant  afp06-winners.ant  afp07-antastic.ant  afp07-brian.ant  afp07-group7.ant  afp07-ibrahim.ant  afp07-mier175.ant  afp07-reinier.ant  lightning.ant  ocant.ant
presentation/: .gitignore  presentation.aux  presentation.blg  presentation.dvi  presentation.nav  presentation.out  presentation.tex  presentation.toc  presentation.vrb
src/antish/: Ast.hs  Grammar.txt  Parser.Boolean.hs  Parser.Program.hs  Parser.hs  Parser.y  README  Tokens.hs  Tokens.x  Types.hs  ant2_ast.txt  antish.cabal
src/antish/doc/: Grammar.txt  example.tar
src/antish/example/correct/: StdLib.ha  mv_strategy.ha  our_silly_strategy.ha  ph_strategy.ha  rec-prob-case.ha  test1.ha  test2.ha
src/antish/example/fail/: rec-bad.ha  rec-good-diff1.ha  rec-good.ha  test2b.ha  test3.ha
src/antish/src/: Assembly.hs  Ast.hs  Code.hs  Compiler.hs  Loader.hs  Main.hs  Parser.hs  Simplifier.hs  Simplify.hs  Tree.hs
src/antish/src/Compiler/: BuiltIn.hs  Class.hs  Compile.hs  CompileT.hs  Compiler.hs  Core.hs  Error.hs  Eval.hs  Function.hs  If.hs  Precompile.hs  Scope.hs  TailRecursion.hs  Utility.hs
src/antish/src/Parser/: Block.hs  Boolean.hs  Builtin.hs  Expr.hs  LangDef.hs  Program.hs
src/antish/src/Simplify/: Inline.hs  InlineT.hs  MkLiterals.hs  PropConsts.hs  Reduce.hs  Simplifier.hs__  Types.hs
src/antish/src/main/: Main.hs
src/antish/testsuite/compiler/: CompilerTest.hs  ErrorTest.hs  ForTest.hs  IfThenElseTest.hs  ProbTest.hs  RecursiveTest.hs  ScopeTest.hs  TryTest.hs  Util.hs
src/antish/testsuite/parser/: BoolCombinators.hs  BoolParensTest.hs  BoolTest.hs
src/ui/: afp-ants.cabal
